2018.06.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* CMakeLists.txt:
	  - STATIC_IN_RELEASE is now set to "static" when WITH_TESTS is disabled.
	    (closes #126)

2018.06.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* CMakeLists.txt:
	  - Added "WITHOUT_PNG" option that builds qrencode without PNG support.
	    (closes #125)

2018.06.01 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* README.md:
	  - Added some notes of how to use autogen.sh. (closes #122) (Thanks to
	    @thebunnyrules)

2017.10.13 Kentaro Fukuchi <kentaro@fukuchi.org>
	[master, 4.0]
	* qrencode.h:
	  - Fix build on windows with Visual Studio. (merged #108) (Thanks to
	    @Ation)
	[4.0]
	* README.md:
	  - Revert again 2252a0f. Sorry for confusion.

2017.10.05 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* tests/test_{mask,mmask,qrspec,mqrspec,split_urls,qrencode}.c:
	  - Removed or commented out unused functions.
	  - Command line option introduced for verbose debug information.

2017.10.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* bitstream.h, qrencode.c, qrencode_inner.h:
	  - Memory alignment improved.
	* tests/test_qrencode.c:
	  - Error messages improved.
	* tests/{common.h datachunk.h, decoder.h, rscode.h, rsecc_decoder.h}:
	  - Reserved macro names are replaced.
	* bitstream.[ch]:
	  - Some variables' type changed from int to size_t. (closing #89 and
	    #102)
	* tests/common.[ch], tests/test_split_url.c:
	  - Fixed some warnings.
	* NEWS:
	  - Format fixes.
	* mask.[ch]:
	  - Some variables' type changed from int to unsigned int. (closing #89 and
	    #102)
	* tests/test_mask.c:
	  - Fixed some warnings.
	* qrencode.h, qrinput.h, mqrspec.c:
	  - Comment format fixes.
	* various files in tests:
	  - Fixed some warnings.
	* tests/test_qrencode.c:
	  - Removed unused function.
	* tests/test_qrinput.c:
	  - Added a new test function.

2017.09.29 Kentaro Fukuchi <kentaro@fukuchi.org>
	[4.0]
	* README.md:
	  - Format fixes.
	* rsecc.[ch]: